--- a/Views/KYC/Create.cshtml
+++ b/Views/KYC/Create.cshtml
@@ -1,4 +1,4 @@
-@model KYC
+@* @model KYC
 
 <form method="post">
 	<div class="border p-3 mt-4">
@@ -27,4 +27,4 @@
 	@{
 		<partial name="_ValidationScriptsPartial" />
 	}
-}
+} *@
