--- a/Views/KYC/index.cshtml
+++ b/Views/KYC/index.cshtml
@@ -8,11 +8,13 @@
         <div class="col-6">
             <h2 class="text-primary">List</h2>
 		</div>
-        <div class="col-6 text-end">
+
+        @* <div class="col-6 text-end">
             <a asp-controller="KYC" asp-action="Create" class="btn btn-primary">
                <i class="bi bi-plus-circle"></i> &nbsp; Create New 
 			</a>
-		</div>
+		</div> *@
+
 	</div>
     <br /><br />
 
@@ -20,15 +22,15 @@
     <thead>
         <tr>
             <th>
-                KYCSystem
+               Username
 			</th>
             <th>
-                KYCType
+                PhoneNumber
 			</th>
             <th></th>
 		</tr>
 	</thead>
-    @* <tbody>
+    <tbody>
         @foreach(var obj in Model)
         {
             <tr>
@@ -36,19 +38,19 @@
                     @obj.UAccUsername
 				</td>
                 <td width="30%">
-                    @obj.UAccPassword
+                    @obj.UAccPhoneNumber
 				</td>
-                <td>
+                @* <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="KYC" asp-action="Edit" asp-route-id="@obj.UAccID"
                         class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
                         <a asp-controller="KYC" asp-action="Delete" asp-route-id="@obj.UAccID"
                         class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
 					</div>
-				</td>
+				</td> *@
 			</tr>
         }
-    </tbody> *@
+    </tbody>
 
 </table>
 </div>
