--- a/Views/KYC/index.cshtml
+++ b/Views/KYC/index.cshtml
@@ -21,23 +21,35 @@
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
         <tr>
+             <th>
+               ID
+			</th>
             <th>
                Username
 			</th>
             <th>
+                Password
+			</th>
+            <th>
                 PhoneNumber
 			</th>
-            <th></th>
+
 		</tr>
 	</thead>
     <tbody>
         @foreach(var obj in Model)
         {
             <tr>
+                 <td width="50%">
+                    @obj.UAccID
+				</td>
                 <td width="50%">
                     @obj.UAccUsername
 				</td>
-                <td width="30%">
+                 <td width="50%">
+                    @obj.UAccPassword
+				</td>
+                 <td width="30%">
                     @obj.UAccPhoneNumber
 				</td>
                 @* <td>
